--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,21 @@
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=false
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_enabled=false
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_enabled=false
+auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.customSuite_2e_enabled=false
+auxiliary.org-netbeans-modules-php-phpunit.customSuite_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_enabled=false
+auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=true
+file.reference.Dao-tests=Asouza/Dao/tests
 include.path=${php.global.include.path}
 php.version=PHP_53
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=true
-test.src.dir=tests
+test.src.dir=${file.reference.Dao-tests}
+testing.providers=PhpUnit
 web.root=.
